k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-desk-api
spec:
  selector:
    matchLabels:
      app: service-desk-api
  replicas: 1
  template:
    metadata:
      labels:
        app: service-desk-api
    spec:
      containers:
      - name: app
        image: afakharany/servicedesk:api
