k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-desk
spec:
  selector:
    matchLabels:
      app: service-desk
  replicas: 1
  template:
    metadata:
      labels:
        app: service-desk
    spec:
      volumes:
      - name: tickets-vol
        hostPath:
            path: /tmp/hostpath-provisioner
            type: Directory
      containers:
      - name: service-desk
        image: afakharany/servicedesk:1.0
        volumeMounts:
          - mountPath: /app/tickets.json
            name: tickets-vol
            subPath: "tickets.json"
