k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicedesk-api-svc
spec:
  selector:
    app: service-desk-api
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
