k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicedesk-svc
spec:
  selector:
    app: service-desk
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
