k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sd-ingress
spec:
  rules:
  - host: app.servicedesk.local
    http:
      paths:
      - path: /
        backend:
          serviceName: servicedesk-svc
          servicePort: 8080
  - host: api.servicedesk.local
    http:
      paths:
      - path: /
        backend:
          serviceName: servicedesk-api-svc
          servicePort: 8000
